# MOJIAN-terminal-novel-editor

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  doc.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/mj-cli/: Cargo.toml
crates/mj-cli/src/: logging.rs  main.rs
crates/mj-cli/tests/: cli.rs
crates/mj-core/: Cargo.toml
crates/mj-core/src/: appearance.rs  atomic.rs  chapter_file.rs  config.rs  diff.rs  epub.rs  error.rs  export.rs  history.rs  id.rs  index.rs  lib.rs  lock.rs  model.rs  proof_external.rs  proof_llm.rs  proofing.rs  slug.rs  store.rs  swap.rs  workspace.rs
crates/mj-core/tests/: characters.rs  export_roundtrip.rs  history_acceptance.rs  index_recovery.rs  size.rs  store.rs  structure.rs  swap_recovery.rs  verify_fts5.rs
crates/mj-text/: Cargo.toml
crates/mj-text/src/: count.rs  eol.rs  format.rs  lib.rs  pair.rs  search.rs  width.rs
crates/mj-text/src/proof/: confusion.rs  confusion_builtin.tsv  consistency.rs  external.rs  llm.rs  mod.rs  punct.rs  rules.rs  style.rs
crates/mj-text/tests/: count_props.rs  eol_props.rs  format_props.proptest-regressions  format_props.rs  proof_props.rs  search_props.proptest-regressions  search_props.rs  wrap_props.proptest-regressions  wrap_props.rs
crates/mj-tui/: Cargo.toml
crates/mj-tui/src/: app.rs  batch.rs  clipboard.rs  commands.rs  doctor.rs  event.rs  font.rs  keyboard.rs  keymap.rs  lib.rs  panic.rs  theme.rs
crates/mj-tui/src/editor/: autosave.rs  buffer.rs  mod.rs  view.rs
crates/mj-tui/src/screens/: character_form.rs  character_panel.rs  command_palette.rs  completion.rs  confirm.rs  consent.rs  format_preview.rs  help.rs  history_panel.rs  input.rs  mod.rs  modal.rs  proof_panel.rs  search_panel.rs  settings.rs  shelf.rs  stats.rs  tree.rs
crates/mj-tui/src/themes/: dark.toml  high_contrast.toml  light.toml  sepia.toml
crates/mj-tui/tests/: batch_scope.rs  buffer_props.rs  character_flow.rs  completion_flow.rs  delete_flow.rs  keymap_flow.rs  layout_flow.rs  library_flow.rs  modal_stack_flow.rs  mouse_flow.rs  move_flow.rs  multiselect_flow.rs  palette_flow.rs  panic_recovery.rs  paste_flow.rs  proof_flow.rs  rename_flow.rs  render.rs  settings_flow.rs  theme_flow.rs
docs/decisions/: 0001-verify-toolchain-and-fts5.md  0002-m0-deviations.md  0003-windows-support.md  0004-toml-front-matter.md  0005-terminal-font-capability-verification.md
