[workspace]
resolver = "3"
members = ["crates/mj-core", "crates/mj-text", "crates/mj-tui", "crates/mj-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
mj-core = { path = "crates/mj-core" }
mj-text = { path = "crates/mj-text" }
mj-tui = { path = "crates/mj-tui" }

ratatui = "0.30"
ropey = "1"
unicode-width = "0.2"
unicode-segmentation = "1"
# §6.4 的 no_punct 口径要按 Unicode 类别 P*/S*/Z* 排除，std 无此 API。
# §3 的依赖表没列——文档要求了一项它没给工具的检查。
unicode-general-category = "1"
similar = "2"
jieba-rs = "0.7"
regex = "1"
fancy-regex = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
blake3 = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
# env-filter 非默认 feature，但 doc.md §9 要求 RUST_LOG 可调级别。
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
ureq = "2"
# epub 导出。只要 deflate，且指定用 flate2——它已经在依赖树里（ureq 的 gzip），
# 换别的 deflate 后端等于白引一个新的压缩实现。
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
# serde 非默认 feature，但快照链要把时间写进 JSON（§6.9）。
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
# Windows 上探测进程存活（陈旧锁回收），只取需要的 API。
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
] }

insta = "1"
proptest = "1"
criterion = "0.5"
tempfile = "3"

[workspace.lints.clippy]
# doc.md §0 禁止事项 2：TUI 运行期间不得向 stdout/stderr 打印。
# mj-cli 的无头子命令需要打印，在该 crate 内按需 allow。
print_stdout = "warn"
print_stderr = "warn"

# doc.md §0 禁止事项 1：不得有静默丢失用户正文的路径。
# 测试内 unwrap 是正当的（panic 即失败信号），故各 crate 的测试文件顶部
# 用 #![cfg_attr(test, allow(...))] 或就地 allow 豁免。
unwrap_used = "warn"
expect_used = "warn"

# doc.md §0 禁止事项 5：光标一律按 grapheme，不按字节/char 切分。
string_slice = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
# 去掉符号表，发布的二进制小一截（bundled sqlite 本就占地方）。
# 崩溃恢复靠的是 panic hook dump 未保存的正文，不是符号丰富的栈回溯，故无损。
strip = true

# 正文是用户的手稿：release 下也保留溢出检查，宁可 panic（有 hook 兜底 dump）也不要静默算错字数/偏移。
overflow-checks = true
