[package]
name = "mj-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "二进制入口与无头子命令（count / format / export / doctor）。"

[[bin]]
name = "mj"
path = "src/main.rs"

[dependencies]
mj-core.workspace = true
mj-text.workspace = true
mj-tui.workspace = true

clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.clippy]
# 无头子命令的输出就是走 stdout/stderr —— 此处不适用 TUI 的禁印规则（doc.md §12.2）。
unwrap_used = "warn"
expect_used = "warn"
