[package]
name = "mj-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "领域模型、磁盘存储、索引、版本历史。不依赖 ratatui。"

[dependencies]
mj-text.workspace = true
unicode-segmentation.workspace = true
# 两级 diff（§6.9）。§3 把 similar 列在技术栈里，本就是给历史用的。
similar.workspace = true

ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
zstd.workspace = true
blake3.workspace = true
# 模型校对后端的 HTTP（§6.8）。阻塞式，跑在工作线程——§3 引它就是为这个。
ureq.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
directories.workspace = true
chrono.workspace = true
# epub 导出（§12.2）。epub 就是个规定了目录结构的 zip。
zip.workspace = true

# 单实例锁需要探测陈旧锁的持有者是否还活着（src/lock.rs）。
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
# 集成测试要把导出的 epub 当 zip 读回来。
zip.workspace = true
proptest.workspace = true
criterion.workspace = true

[lints]
workspace = true
